[package]
name = "bgp-rs"
version = "0.5.0"
authors = ["Christian Veenman <chris_veenman@hotmail.com>"]
edition = '2018'
readme = "README.md"
keywords = ["bgp", "parser"]
categories = ["parsing", "network-programming"]
repository = "https://github.com/DevQps/bgp-rs"
homepage = "https://github.com/DevQps/bgp-rs"
documentation = "https://docs.rs/bgp-rs"
description = "A library for parsing Border Gateway Protocol (BGP) formatted streams."
license = "GPL-3.0"
exclude = [
    "README.md",
    "res/*",
    "tests/*",
    ".travis.yml"
]

[badges]
travis-ci = { repository = "DevQps/bgp-rs", branch = "master" }
codecov = { repository = "DevQps/bgp-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]
default = []
# Enable Flowspec SAFI & NLRI decoding/encoding
# Flowspec RFC: https://tools.ietf.org/html/rfc5575
# Uses bitflags for Flowspec Filter operators
flowspec = ["bitflags"]

[dependencies]
bitflags = { version = "1.2", optional = true }
byteorder = { version = "1.3.1", features = ["i128"] }

[dev-dependencies]
libflate = "0.1"
mrt-rs = "2.0.0"
pcap-file = "1.1"
etherparse = "0.9.0"
twoway = "0.2.0"

